# openproxy

./: .gitignore  AGENTS.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README.zh-CN.md  TIKTOKEN_BALANCE_IMPLEMENTATION.md  TOKEN_BALANCE_QUICK_REFERENCE.md  package.json  turbo.json  vercel.json
.github/: dependabot.yml
.github/workflows/: docker-build.yml  test.yml
apps/api/: AGENTS.md  Cargo.toml  Dockerfile  README.md
apps/api/.sqlx/: query-019a21fad3e2962bbcd8f1ac33877fd926cd7641312a89042d466ed7850f4cde.json  query-1222c56fee72200e9d964b75dd8c38cb3f11ab4a172741cce2a525e8dd8f3880.json  query-b099111384266e55a4c8abfdab8b64a23f8d9830a91f08725258f64be6cef712.json  query-d708273e0f73f09b997581d28b1dda6933a28d4221b575dde2232d060c73c61b.json  query-d7ae2a24d185c39c298248c3ac53fc7ab16a750b6ba475e288249efb7411a2a4.json  query-df7a94fcb6e72e1c28f7effb831dd898cf34868b062c9ab2ca5ae5fd7368f8e5.json
apps/api/src/: lib.rs  main.rs  router.rs
apps/api/src/adapters/: bailian.rs  deepseek.rs  default.rs  kimi.rs  minimax.rs  mod.rs  openai.rs  opencode.rs  openrouter.rs  stream_usage.rs  vercel.rs  zai.rs
apps/api/src/db/: model.rs
apps/api/src/handlers/: chat.rs  chat_completions.rs  embeddings.rs  health.rs  messages.rs  mod.rs  models.rs  providers.rs  responses.rs
apps/api/src/middleware/: auth.rs
apps/api/src/models/: ai_provider.rs  mod.rs  model.rs  provider.rs
apps/api/src/services/: access.rs  mod.rs  models.rs  usage.rs
apps/api/src/shared/: cache.rs  chat_common.rs  db.rs  mod.rs  proxy.rs  proxy_flow.rs  redis.rs  response.rs  state.rs
apps/api/src/utils/: balance.rs  chat.rs  hash.rs  ip.rs  mod.rs  nanoid.rs  openresponses.rs  provider_adapter.rs  rsa.rs  tokens.rs
apps/server/: .env.example  AGENTS.md  Dockerfile  README.md  drizzle.config.ts  eslint.config.js  index.ts  package.json  tsconfig.json
apps/web/: AGENTS.md  Dockerfile  docker-entrypoint.sh  eslint.config.js  (+5 more)
docker/: .env.example  docker-compose.dokploy.yml  docker-compose.yml  prepare.sh
scripts/: generateRSAKey.ts  syncApiProviderRegistry.ts
website/: .gitignore  README.md  next.config.mjs  package.json
(+335 files in other folders)
