[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
  "brotli",
  "gzip",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
rust_decimal = "1.35"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
async-stream = "0.3.6"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "chrono",
  "rust_decimal",
  "json",
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
sha2 = "0.10"
hex = "0.4"
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
rand = "0.8"
nanoid = "0.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
