[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", features = [
  "json",
  "stream",
  "rustls",
  "brotli",
  "gzip",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
rust_decimal = { version = "1.42", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
async-stream = "0.3.6"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "chrono",
  "rust_decimal",
  "json",
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
sha2 = "0.10"
hex = "0.4"
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
rand = "0.8"
nanoid = "0.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tiktoken-rs = "0.12"
redis = "1.2"
